# attested-image

./: .gitattributes  .gitignore  Cargo.toml  README.md
circom/: input.json  public.json  square_root_sum.circom
circom_circuit_benchmark_tool/circuits/: README.md
circom_circuit_benchmark_tool/scripts/: .gitignore  compile_circuit.sh  diff_square_sum_10_benchmark.txt  diff_square_sum_10_stdout.txt  diff_square_sum_1M_benchmark.txt  diff_square_sum_1M_stdout.txt  diff_square_sum_3.txt  diff_square_sum_3_benchmark.txt  diff_square_sum_3_stdout.txt  (+3 more)
circuit_params/: dds_1.zkey  dss_0.zkey  pot12_0001.ptau
noir_circuit_benchmark_tool/: README.md  data_generator.py
program/: Cargo.toml
python_scripts/: .gitignore  circom.py  compare_pixel_in_parallel.py  convert_data_into_circom_compatiable_format.py  decompose_video_to_frams.py  main.sh  random_test_data_generator.py  serialize_image_to_json.py  setup_benchmark.md  setup_circuit_params.sh
range_check/: Cargo.toml  README.md
resizing_video/: .gitignore  README.md  auto_resize.py  compare_ffmpeg_out_with_own_bilinear.py  compare_v2.py  convert_image_to_rgb.py  convert_image_to_yuv.py  custom_bilinear_U.txt  custom_bilinear_V.txt  custom_bilinear_Y.txt  custom_bilinear_r.txt  resize_image  resize_image.c  sand_480270_B_channel.txt  sand_480270_G_channel.txt  sand_480270_R_channel.txt  sand_480270_U_channel.txt  sand_480270_V_channel.txt  sand_480270_Y_channel.txt
resources/: .gitignore  gen.py  vec-head-tail-mini.txt  vec1.txt
script/: Cargo.toml
shared/: Cargo.toml
sp1_circuits/: Cargo.toml  Makefile
(+80 files in other folders)
